--- a/index.html
+++ b/index.html
@@ -1,9 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
-<title>DirtMc</title>
+<meta charset="UTF-8">
+<title>DirtMC</title>
+
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:Arial;
+}
+
+body{
+  height:100vh;
+  background:url("assets/bg.jpg") center/cover no-repeat;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+/* blur layer */
+.blur{
+  position:absolute;
+  inset:0;
+  backdrop-filter:blur(8px);
+  background:rgba(0,0,0,0.4);
+}
+
+/* content */
+.container{
+  position:relative;
+  text-align:center;
+  color:white;
+}
+
+/* logo */
+.logo{
+  width:220px;
+  margin-bottom:30px;
+  animation:float 4s ease-in-out infinite;
+}
+
+/* buttons */
+.buttons{
+  display:flex;
+  gap:20px;
+  justify-content:center;
+}
+
+.btn{
+  width:70px;
+  height:70px;
+  border-radius:50%;
+  background:#22c55e;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:28px;
+  text-decoration:none;
+  color:white;
+  box-shadow:0 10px 20px rgba(0,0,0,0.5);
+  animation:float 3s ease-in-out infinite;
+}
+
+.btn:hover{
+  transform:scale(1.15);
+}
+
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-12px)}
+}
+</style>
 </head>
+
 <body>
-<h1>اشتغل الموقع 🔥</h1>
+
+<div class="blur"></div>
+
+<div class="container">
+  <img src="assets/logo.png" class="logo">
+
+  <div class="buttons">
+    <a class="btn" href="#">🌐</a>
+    <a class="btn" href="#">💬</a>
+    <a class="btn" href="#">🎮</a>
+  </div>
+</div>
+
 </body>
 </html>
