--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>DirtMC — Premium Minecraft Server</title>
+<title>DirtMC Server</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
@@ -112,7 +112,7 @@ h1{
 const joinBtn = document.getElementById('joinBtn');
 joinBtn.addEventListener('click', ()=>{
   joinBtn.textContent = '✔ Copied & Ready';
-  setTimeout(()=> joinBtn.textContent = '▶ Join Server', 1400);
+  setTimeout(()=> joinBtn.textContent = '▶ اسخ', 1400);
   navigator.clipboard.writeText('dirtmc.pro:21411').catch(()=>{});
 });
 
