--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ h1{
 
       <div style="display:flex; align-items:center; gap:12px; flex-wrap:wrap;">
         <div class="actions">
-          <button class="btn btn-join" id="joinBtn">▶ أنسخ</button>
+          <button class="btn btn-join" id="joinBtn">▶ dirtmc.pro:21411</button>
         </div>
         <div class="socials" style="margin-left:8px;">
           <a class="social" href="https://discord.gg/dirtmc" target="_blank" rel="noopener">💬 Discord</a>
@@ -112,7 +112,7 @@ h1{
 const joinBtn = document.getElementById('joinBtn');
 joinBtn.addEventListener('click', ()=>{
   joinBtn.textContent = '✔ Copied & Ready';
-  setTimeout(()=> joinBtn.textContent = '▶ انسخ', 1400);
+  setTimeout(()=> joinBtn.textContent = '▶ dirtmc.pro:21411', 1400);
   navigator.clipboard.writeText('dirtmc.pro:21411').catch(()=>{});
 });
 
